Fix .env issue, add new style.css, update templates and config files

--- a/presentation/presentation_slides_final.html
+++ b/presentation/presentation_slides_final.html
@@ -48,7 +48,7 @@
 <h1 id="a-real-world-example">A Real-World Example</h1>
 <p style="text-align: center;">
   <video width="800" height="450" controls>
-    <source src="Keeta_squat_1.mp4" type="video/mp4" />
+    <source src="../temp_videos/Keeta_squat_1.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 </p>
@@ -226,7 +226,7 @@ decision.</li>
 <h1 id="output-annotated-video-with-skeleton-overlay">Output: Annotated video with skeleton overlay</h1>
 <p style="text-align: center;">
   <video width="800" height="450" controls>
-    <source src="theo_maddox_squat_2.mp4" type="video/mp4" />
+    <source src="../example%20videos/theo_maddox_squat_2.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 </p>
